--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -23,7 +23,7 @@
     <section id="blog" class="padding-top">
         <div class="container">
           <div class="col-md-4 col-sm-12">
-            <form action="{% url 'blog' %}" method="POST">
+            <form action="{% url 'post_list' %}" method="POST">
                   {% csrf_token %}
                   <div class="form-group ">
                     <label for="date">Виберіть дату</label>
@@ -39,20 +39,20 @@
             <div class="row">
                 <div class="col-md-9 col-sm-7">
                     <div class="row">
-                      {% for post in posts %}
+                      {% for post in object_list %}
 
                          <div class="col-sm-12 col-md-12">
                             <div class="single-blog single-column">
-                                {# <div class="post-thumb">
+                                <div class="post-thumb">
                                     <a href="blogdetails.html"><img src="{% static 'images/blog/7.jpg' %}" class="img-responsive" alt=""></a>
                                     <div class="post-overlay">
                                        <span class="uppercase"><a href="#">14 <br><small>Feb</small></a></span>
                                    </div>
-                                </div> #}
+                                </div>
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold"><a href="{{ post.title }}">{{ title }}</a></h2>
+                                    <h2 class="post-title bold"><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
                                     <h3 class="post-author"><a href="#">{{ post.sourse }}</a></h3>
-                                    <p>{{ post.description }}</p>
+                                    <p>{{ post.short_description }}</p>
                                     <a href="#" class="read-more">View More</a>
                                     <div class="post-bottom overflow">
                                         <ul class="nav navbar-nav post-nav">
