--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -34,7 +34,7 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="{% url 'index' %}">Головна</a></li>
-                        <li><a href="{% url 'blog' %}">Новини</a></li>
+                        <li><a href="{% url 'post_list' %}">Новини</a></li>
                         <li class="dropdown"><a href="#">Колектив <i class="fa fa-angle-down"></i></a>
                             <ul role="menu" class="sub-menu">
                                 <li><a href="aboutus.html">Адміністрація</a></li>
