--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -39,21 +39,22 @@
             <div class="row">
                 <div class="col-md-9 col-sm-7">
                     <div class="row">
-                      {% for post in object_list %}
+                      {% if posts %}
+                      {% for post in posts %}
 
                          <div class="col-sm-12 col-md-12">
                             <div class="single-blog single-column">
                                 <div class="post-thumb">
-                                    <a href="blogdetails.html"><img src="{% static 'images/blog/7.jpg' %}" class="img-responsive" alt=""></a>
+                                    <a href="{{ post.post_link }}"><img src="{{ post.photo_main }}" class="img-responsive" alt=""></a>
                                     <div class="post-overlay">
                                        <span class="uppercase"><a href="#">14 <br><small>Feb</small></a></span>
                                    </div>
                                 </div>
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold"><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
-                                    <h3 class="post-author"><a href="#">{{ post.sourse }}</a></h3>
+                                    <h2 class="post-title bold"><a href="{{ post.post_link }}" target="_blank">{{ post.title }}</a></h2>
+                                    <h3 class="post-author"><a href="{{ post.source.link }}" target="_blank">{{ post.source }}</a></h3>
                                     <p>{{ post.short_description }}</p>
-                                    <a href="#" class="read-more">View More</a>
+                                    <a href="{{ post.post_link }} target="_blank"" class="read-more">View More</a>
                                     <div class="post-bottom overflow">
                                         <ul class="nav navbar-nav post-nav">
                                             <li><a href="#"><i class="fa fa-tag"></i>Creative</a></li>
@@ -65,22 +66,36 @@
                             </div>
                         </div>
                       {% endfor %}
+                      {% else %}
+                        <div class="col-sm-12 col-md-12">
+                          <p>There is no posts yet</p>
+                        </div>
+                      {% endif %}
 
                     </div>
                     <div class="blog-pagination">
+                      {% if posts.has_other_pages %}
                         <ul class="pagination">
-                          <li><a href="#">left</a></li>
-                          <li><a href="#">1</a></li>
-                          <li><a href="#">2</a></li>
-                          <li class="active"><a href="#">3</a></li>
-                          <li><a href="#">4</a></li>
-                          <li><a href="#">5</a></li>
-                          <li><a href="#">6</a></li>
-                          <li><a href="#">7</a></li>
-                          <li><a href="#">8</a></li>
-                          <li><a href="#">9</a></li>
-                          <li><a href="#">right</a></li>
+                          {% if posts.has_previous %}
+                            <li><a href="?page={{ posts.previous_page_number }}">left</a></li>
+                          {% else %}
+                            <li class='hidden'><a href="#">left</a></li>
+                          {% endif %}
+                          {% for i in posts.paginator.page_range %}
+                            {% if posts.number == i %}
+                              <li class="active"><a href="#">{{ i }}</a></li>
+                            {% else %}
+                              <li><a href="?page={{ i }}">{{ i }}</a></li>
+                            {% endif %}
+                          {% endfor %}
+
+                          {% if posts.has_next %}
+                            <li><a href="?page={{posts.next_page_number}}">right</a></li>
+                          {% else %}
+                            <li class='hidden'><a href="#">right</a></li>
+                          {% endif %}
                         </ul>
+                      {% endif %}
                     </div>
                  </div>
                 <div class="col-md-3 col-sm-5">
