change posts visualization

--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -37,33 +37,27 @@
 
 
             <div class="row">
-                <div class="col-md-9 col-sm-7">
+                <div class="col-md-9 col-sm-9">
                     <div class="row">
                       {% if posts %}
                       {% for post in posts %}
 
                          <div class="col-sm-12 col-md-12">
                             <div class="single-blog single-column">
-                                <div class="post-thumb">
-                                    <a href="{{ post.post_link }}"><img src="{{ post.photo_main }}" class="img-responsive" alt=""></a>
-                                    <div class="post-overlay">
-                                       <span class="uppercase"><a href="#">14 <br><small>Feb</small></a></span>
-                                   </div>
+                              <div class="post-content overflow">
+                                <div class="col-sm-3 col-md-3" >
+                                  <div class="post-thumb">
+                                      <a href="{{ post.post_link }}"><img src="{{ post.photo_main }}" class="rounded mx-auto d-block" style="width:100%" alt=""></a>
+                                  </div>
                                 </div>
-                                <div class="post-content overflow">
-                                    <h2 class="post-title bold"><a href="{{ post.post_link }}" target="_blank">{{ post.title }}</a></h2>
-                                    <h3 class="post-author"><a href="{{ post.source.link }}" target="_blank">{{ post.source }}</a></h3>
-                                    <p>{{ post.short_description }}</p>
-                                    <a href="{{ post.post_link }} target="_blank"" class="read-more">View More</a>
-                                    <div class="post-bottom overflow">
-                                        <ul class="nav navbar-nav post-nav">
-                                            <li><a href="#"><i class="fa fa-tag"></i>Creative</a></li>
-                                            <li><a href="#"><i class="fa fa-heart"></i>32 Love</a></li>
-                                            <li><a href="#"><i class="fa fa-comments"></i>3 Comments</a></li>
-                                        </ul>
-                                    </div>
+                                <div class="col-sm-9 col-md-9">
+                                      <h2 class="post-title bold"><a href="{{ post.post_link }}" target="_blank">{{ post.title }}</a></h2>
+                                      <h3 class="post-author"><a href="{{ post.source.link }}" target="_blank">{{ post.source }}</a></h3>
+                                      <p>{{ post.short_description }}</p>
                                 </div>
+                              </div>
                             </div>
+                        <hr/>
                         </div>
                       {% endfor %}
                       {% else %}
@@ -98,7 +92,7 @@
                       {% endif %}
                     </div>
                  </div>
-                <div class="col-md-3 col-sm-5">
+                <div class="col-md-3 col-sm-3">
                     <div class="sidebar blog-sidebar">
                         <div class="sidebar-item  recent">
                             <h3>Comments</h3>
